[Wayland] Bookmarks Menu popup is not aligned with the toolbar button
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox111 | --- | unaffected |
| firefox112 | --- | unaffected |
| firefox113 | --- | fixed |
People
(Reporter: ke5trel, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
STR:
- Open Customize mode and add the "Bookmarks Menu" button to the toolbar.
- Click the "Bookmarks Menu" button.
The popup appears horizontally displaced rather than being anchored to the button.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=526b311af03354ed0f06ec7572b486a51bc884f6&tochange=c15f0fb1c92375ea751b3916a4c25a34403f21b2
Regressed by Bug 1809084.
Comment 1•3 years ago
|
||
:emilio, since you are the author of the regressor, bug 1809084, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 2•3 years ago
|
||
This only happens on the right of the toolbar, and only on Wayland afaict.
Yes, this only happens with MOZ_ENABLE_WAYLAND=1 on Ubuntu 22.10.
| Assignee | ||
Comment 4•3 years ago
|
||
This matches the nsMenuPopupFrame code.
There are a few places where we want to fix our position, and I unified
how we do this in the regressing bug.
ShouldFollowAnchor() = false popups like this used to just not be repositioned directly:
https://hg.mozilla.org/mozilla-central/rev/c15f0fb1c92375ea751b3916a4c25a34403f21b2#l9.274
IsNoAutoHide() popups fixed their position once:
https://hg.mozilla.org/mozilla-central/rev/c15f0fb1c92375ea751b3916a4c25a34403f21b2#l9.867
I unified in the noautohide behavior but in a better place here:
https://hg.mozilla.org/mozilla-central/rev/c15f0fb1c92375ea751b3916a4c25a34403f21b2#l9.1182
But this trips this Wayland code which wasn't treating AnchorType_Point
popups properly.
The fact that this popup doesn't follow the anchor feels wrong, but is
pre-existing.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 5•3 years ago
|
||
The fact that the bookmarks popup doesn't follow its anchor feels like
an oversight that stems from the fact that only <panel type=arrow>
panels do that by default.
Follow anchors by default, while keeping the opt-out possible instead.
Comment 7•3 years ago
•
|
||
I can also confirm that with regards to the "Bookmarks Menu" button on Ubuntu 22.10 Wayland
AFA this bug, please note that Unlike bug 1823249, maximisation of browser window is not a factor.
What/where is MOZ_ENABLE_WAYLAND=1?
I don't have it in about:config?
about:support
Window Protocol wayland
Desktop Environment ubuntu:gnome
Subsequent to further testing, please note the following:
My set up is a laptop plus extra monitor (set to join). Their resolutions are not set the same i.e.laptop 1368x768, monitor 1920x1080.
Extension Developer Tools bug 1823249
- Developer Tools in above refers to Extension Developer Tools, not Web Developer Tools (Ctrl+Shift+i)
about:debugging#/runtime/this-firefox -> (any extension) Inspect - Issue is observed with maximised window on both the laptop & external monitor
- No issue with NOT maximised window on both the laptop & external monitor
Web Developer Tools
I get an interesting result when testing with Web Developer Tools in a Separate Window.
3-dot Popup location in Web Developer Tools
- No issue on the external monitor, maximised or not
- No issue on laptop monitor when NOT maximised
- Same issue as bug 1823249 on laptop monitor when maximised
If the monitor resolution is a factor, then the Developer Tools might be calculating the location of the popup based on incorrect resolution. Firefox might be recalculating the location when not-maximised.
screenshot to follow
Comment 8•3 years ago
|
||
Web Developer Tools maximised
Comment 9•3 years ago
|
||
Tested with Firefox 111.0 (64-bit), Ubuntu 22.10
- No issue with Web Developer Tools
- Extension Developer Tools doesn't have maximise option so it cant be tested when maximised (no issue when not- maximised)
| Assignee | ||
Comment 10•3 years ago
|
||
Bug 1823552 also fixes this by preserving the anchor rect, but the fix here should probably still apply.
Comment 11•3 years ago
|
||
Updated•3 years ago
|
Comment 12•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 13•3 years ago
|
||
Reproduced the issue with Firefox 113.0a1 (2023-03-20) on Ubuntu 22.
The issue is verified fixed with Firefox 114.0a1 (20230427095144) and Firefox 113.0b8 (20230425192707) on Ubuntu 22.
| Comment hidden (off-topic) |
| Reporter | ||
Comment 15•3 years ago
|
||
I can also verify it is fixed with Nightly 114.0a1 (2023-04-27) on Ubuntu 23.04 Wayland. Bug 1823249 is a similar but separate issue.
Description
•